--- a/paquetes.html
+++ b/paquetes.html
@@ -82,6 +82,7 @@
 </select>
 <span>Selected: {{ selected }}</span>
 		<script src="script.js"> </script>
+		<script src="script.js"> </script>
 </div>	
 
 
